MOD-1959 - Added padding to dc toolbar to prevent overlapping from gwt invisible action toolbar

--- a/src/main/resources/css/database-connector.css
+++ b/src/main/resources/css/database-connector.css
@@ -311,3 +311,7 @@ form legend {
     bottom:20px;
     left:20px;
 }
+
+.dc-toolbar {
+    padding-right: 28px !important;
+}
